# gws

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-entrypoint.sh  policy.yaml  pyproject.toml  workers.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3d1fbc5097dc_initial_schema.py  7c3b1d5c8f1a_work_item_cutover.py  a4c2e8f91b3d_data_model_cleanup.py  b7d3f2a41e9c_intent_completion.py  c8f4a1d2e7b6_intent_target_branch.py
docs/superpowers/plans/: 2026-04-02-gws-domain-remodel-implementation.md  2026-04-02-gws-interface-boundary-implementation.md  2026-04-02-prod-readiness-fixes.md  2026-04-03-data-model-cleanup.md  2026-04-03-intent-completion.md
docs/superpowers/specs/: 2026-04-02-gws-domain-remodel-design.md  2026-04-02-gws-interface-boundary-design.md  2026-04-02-gws-work-item-cutover-design.md  2026-04-02-worker-auth-design.md  2026-04-03-intent-completion-design.md
gws/: amendments.py  api.py  auth.py  config.py  contracts.py  control_plane.py  coordinator.py  db.py  gitops.py  models.py  planner.py  planner_client.py  policy.py  public_timeline.py  verifier.py
gws/providers/: anthropic.py  claude_code.py  common.py
tests/: conftest.py  test_amendments.py  test_api.py  test_artifact_verifier.py  test_auth.py  test_control_plane.py  test_coordinator.py  test_end_to_end.py  test_intents_api.py  test_layered_planner.py  test_migrations.py  test_models.py  test_packaging.py  test_planner.py  test_policy.py  test_provider_anthropic.py  test_provider_claude_code.py  test_public_timeline_api.py  test_smoke.py  test_verifier.py
